--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/logout.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/logout.html
@@ -1,4 +1,4 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 {% block content %}
 
 <p>You are logged out!</p>
