--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_reset_complete.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_reset_complete.html
@@ -1,7 +1,6 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 {% block title %}Password reset{% endblock %}
-
+{% block name %}Password set{% endblock %}
 {% block content %}
-    <h1>Password set</h1>
     <p>Your password has been set. You can <a href="{% url "login" %}">log in now</a></p>
 {% endblock %}
