--- a/Solutions/Task3/853506_Karpyza_Andrey/static/css/styles.css
+++ b/Solutions/Task3/853506_Karpyza_Andrey/static/css/styles.css
@@ -10,18 +10,50 @@
 }
 
 .post {
-    border-color: #C5DDE8;
-    background-color: #dadada;
+    border-color: #3bc1a0;
+    background-color: azure;
+    border-style: solid;
+    margin-top: 5px;
     left: 100px;
     width: 400px;
+    height: 120px;
     border-radius: 10px;
-
+    display: block;
+    overflow: hidden;
 }
 .post a {
     margin-left: 10%;
     font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
     color: #222222;
     font-size: 22px;
+}
+
+.post h1{
+    font-style: normal;
+    color: #3bc1a0;
+    font-size: 14px;
+    margin-left: 5px;
+    margin-bottom: 2px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.post h2{
+    font-style: normal;
+    color: black;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    margin-left: 5px;
+    margin-bottom: 2px;
+}
+
+.message{
+    margin: 0;
+    background-color: white;
+    border-style: solid;
+    border-top-color: #3bc1a0;
+    border-width: 0px;
+    border-top-width: 1px;
+    padding: 0px;
 }
 
 .about {
@@ -65,3 +97,16 @@
     border-radius: 20px;
     border-color: #C5DDE8;
 }
+
+.news{
+    margin-left: 80px;
+}
+
+.letter{
+    height: 300px;
+    background-color: ghostwhite;
+    border-radius: 10px;
+    width: 300px;
+    padding: 5px;
+}
+
