--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/DjangoChat/base.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/DjangoChat/base.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="{% static "css/animated_header.css" %}" />
     {% block head %} {% endblock head %}
-    <title>{% block title %}BlockOfBlogs{% endblock title %}</title>
+    <title>{% block title %}Block Of Blogs{% endblock title %}</title>
 </head>
-<body>
+<body class="body">
     <div>
         <header>
-
         <a>BlockOfBlogs</a>
         <p></p>
         {% block header%}{% endblock header %}
@@ -37,7 +36,7 @@
                 </div></li>
             </ul>
             </li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a>Contact</a></li>
         </ul>
         </nav>
     </header>
