--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/login.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/login.html
@@ -1,11 +1,13 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 {% load crispy_forms_tags %}
 {% block head %}
+{% endblock %}
+{% block name %}
+    Log in to your account
 {% endblock %}
 {% block content %}
 <div class="card">
 <div class="card-body">
-<h4 class="card-title">Log in to your account</h4>
 
 <form method="post">
 {% csrf_token %}
@@ -13,7 +15,7 @@
 
 {{ form|crispy }}
 <p><a href="/password-reset/">Forgotten your password?</a></p>
-<button type="submit" class="btn btn-primary btn-block">Log in</button>
+<button type="submit" class="submit">Log in</button>
 </form>
 </div>
 </div>
