--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_change_form.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_change_form.html
@@ -1,12 +1,11 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 {% block title %}Change your password{% endblock %}
-
+{% block name %}Change you password{% endblock %}
 {% block content %}
-    <h1>Change you password</h1>
     <p>Use the form below to change your password.</p>
     <form action="." method="post">
         {{ form.as_p }}
-        <p><input type="submit" value="Change"></p>
+        <p><input type="submit" value="Change" class="submit"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
