--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_reset_confirm.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_reset_confirm.html
@@ -1,14 +1,13 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 {% block title %}Reset your password{% endblock %}
-
+{% block name %}Reset your password{% endblock %}
 {% block content %}
-    <h1>Reset your password</h1>
     {% if validlink %}
         <p>Please enter your new password twice:</p>
         <form action="." method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <p><input type="submit" value="Change my password"/></p>
+            <p><input type="submit" value="Change my password" class="submit"/></p>
         </form>
     {% else %}
         <p>The password reset link was invalid, possibly because it has
