--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_reset_form.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_reset_form.html
@@ -1,13 +1,12 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 
 {% block title %}Reset your password{% endblock %}
-
+{% block name %}Forgotten your password?{% endblock %}
 {% block content %}
-    <h1>Forgotten your password?</h1>
     <p>Enter your e-mail address to obtain a new password.</p>
     <form action="." method="post">
         {{ form.as_p }}
-        <p><input type="submit" value="Send e-mail"></p>
+        <p><input type="submit" value="Send e-mail" class="submit"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
