--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/register_done.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/register_done.html
@@ -1,8 +1,7 @@
-{% extends "DjangoChat/base.html" %}
+{% extends "DjangoChat/account_base.html" %}
 
 {% block title %}Welcome{% endblock %}
-
+{% block name %}Welcome {{ new_user.first_name }}!{% endblock %}
 {% block content %}
-    <h1>Welcome {{ new_user.first_name }}!</h1>
     <p>Your account has been successfully created. Now you can <a href="{% url "login" %}">log in</a>.</p>
 {% endblock %}
