--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/DjangoChat/base.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/DjangoChat/base.html
@@ -16,7 +16,7 @@
         <nav>
         <ul class="topmenu">
             <li><a href="/">Home</a></li>
-            <li><a href="/login/" class="down">Account</a>
+            <li><a class="down">Account</a>
             <ul class="submenu">
                 <li><div>
                     {% if request.user.is_authenticated %}
