Lab 4 - registration msg with actions

--- a/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_change_done.html
+++ b/Solutions/Task3/853506_Karpyza_Andrey/templates/registration/password_change_done.html
@@ -1,12 +1,7 @@
 {% extends "DjangoChat/account_base.html" %}
 
-{% block title %}Change you password{% endblock %}
-{% block name %}Change you password{% endblock %}
+{% block title %}Password changed{% endblock %}
+{% block name %}Password changed{% endblock %}
 {% block content %}
-    <p>Use the form below to change your password.</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Change" class="submit"></p>
-        {% csrf_token %}
-    </form>
+    <p>Your password has been changed. Now you can go on <a type="submit" href="/">home page</a></p>
 {% endblock %}
